[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroquantum-platform"
version = "1.0.0"
description = "EEG processing platform - made on iPhone"
authors = [{name = "Jij", email = "jij@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.21.0", "scipy>=1.7.0", "pydantic>=1.9.0"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
